# The-Lab

./: .cursorrules  .gitignore  .replit  aggregator.py  ai_analysis.py  app.py  app_backup.py  app_real.py  approval.py  audit_counts.py  auth.py  bureau_tracker.py  claims.py  classifier.py  completeness.py  constants.py  credit_command_plan.py  database.py  demo_data.py  diagnostics_store.py  dispute_strategy.py  doc_validator.py  drip_emails.py  evidence_chain.py  identity_block.py  layout_extract.py  legal_kb.py  letter_generator.py  lob_client.py  normalization.py  nudge_rules.py  parsers.py  patch_og_tags.py  patch_viewport.py  pyproject.toml  readiness.py  referral.py  replit.md  requirements.txt  resend_client.py  (+13 more)
.streamlit/: config.toml
api/: __init__.py  customer_web_static.py  workflow_app.py  workflow_deps.py
attached_assets/: Pasted-Alright-Now-we-re-getting-into-serious-territory-What-y_1771072486239.txt  Pasted-GOAL-Reposition-pricing-visually-and-structurally-for-a_1771166009903.txt  Pasted-I-need-you-to-propose-the-BEST-implementation-plan-no-c_1771290483252.txt  Pasted-Prompt-for-Replit-browser-testing-Context-This-is-the-8_1774641261452.txt  Pasted-ROLE-You-are-my-Replit-engineering-agent-SCOPE-Implemen_1771016503432.txt  Pasted-Solid-foundations-here-are-the-gaps-and-missed-opportun_1771596660788.txt  Pasted-YOU-ARE-THE-REPLIT-AI-AGENT-APP-IS-STREAMLIT-app-py-BAC_1771954112929.txt  Pasted-YOU-ARE-THE-REPLIT-AI-AGENT-APP-IS-STREAMLIT-app-py-CON_1771957837773.txt  Pasted-YOU-ARE-THE-REPLIT-AI-AGENT-APP-IS-STREAMLIT-app-py-GOA_1771957581716.txt  (+11 more)
(+215 files in other folders)
