[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "deepdiff>=8.6.1",
    "openai>=2.20.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow>=12.0.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "reportlab>=4.4.7",
    "requests>=2.32.5",
    "resend>=2.21.0",
    "streamlit>=1.51.0",
    "stripe>=14.3.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]
